--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,12 +3,5 @@
 jdk:
   - openjdk17
 
-before_install:
-  - echo "Starting JitPack build for InsightTrack Analytics"
-  - echo "Building library module: analytics"
-
-android:
-  module: android-api
-
-env:
-  GRADLE_OPTS: "-Xmx2048m -XX:MaxPermSize=512m"
+install:
+  - cd android-api && ./gradlew publishToMavenLocal
