--- a/shopping-demo/gradle/wrapper/gradle-wrapper.properties
+++ b/shopping-demo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Thu Apr 15 13:02:30 IST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.12-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
