--- a/ecommerce-demo-app/app/src/main/AndroidManifest.xml
+++ b/ecommerce-demo-app/app/src/main/AndroidManifest.xml
@@ -14,15 +14,27 @@
         android:theme="@style/Theme.InsightTrackEcommerceDemo"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+
+        <!-- Main Product List Screen (launcher activity) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Cart Screen -->
+        <activity
+            android:name=".CartActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
