feat: complete checkout flow and fix dashboard date aggregation for ecommerce demo

--- a/ecommerce-demo-app/app/src/main/AndroidManifest.xml
+++ b/ecommerce-demo-app/app/src/main/AndroidManifest.xml
@@ -35,6 +35,15 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <activity
+            android:name=".CheckoutActivity"
+            android:exported="false"
+            android:parentActivityName=".CartActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CartActivity" />
+        </activity>
+
     </application>
 
 </manifest>
